--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
+            android:windowSoftInputMode="stateVisible|adjustNothing"
             android:theme="@style/Theme.SvetlogorskCHPP">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
