--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
-    <uses-permission
-        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        tools:remove="android:maxSdkVersion" />
 
     <uses-permission android:name="com.android.alarm.permission.SET_ALARM"/>
 
@@ -65,7 +62,7 @@
         </activity>
 
         <activity
-            android:name=".MainActivity"
+            android:name=".__presentation.activity.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.SvetlogorskCHPP"
