--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <uses-permission android:name="com.android.alarm.permission.SET_ALARM"/>
 
@@ -17,6 +18,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SvetlogorskCHPP"
         tools:targetApi="31">
+
         <provider
             android:name="androidx.startup.InitializationProvider"
             android:authorities="${applicationId}.androidx-startup"
