--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/klipartz_com3"
+        android:icon="@drawable/icon_tec_7"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/klipartz_com3"
+        android:roundIcon="@drawable/icon_tec_7"
         android:supportsRtl="true"
         android:theme="@style/Theme.SvetlogorskCHPP"
         tools:targetApi="31">
